# fuel-cartel-monitor

./: .env.example  .gitignore  COMMIT_MSG.tmp  LICENSE  README.md  pyproject.toml
.github/workflows/: update-dashboard.yml
docs/: index.html
docs/data/: dashboard-2026-02.json  dashboard-2026-03.json  dashboard-2026-04.json  dashboard-2026-05.json  dashboard.json  index.json
sql/: macros.sql  schema.sql  views.sql
src/fuel_cartel_monitor/: analysis.py  cli.py  ingest.py  server.py
src/fuel_price_monitor/: __init__.py  brent.py  cli.py  server.py
tests/: conftest.py  test_analysis.py  test_db.py
