[project]
name = "fuel-price-monitor"
version = "0.1.0"
description = "Monatliche Aufschluesselung deutscher Tankstellenpreise (Diesel/Super E5) in Energiesteuer, CO2-Abgabe, Brent, MwSt und Raffinerie-Marge. Daten: MTS-K via Tankerkoenig + EIA/CrudePriceAPI."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Björn Bethge"}
]
keywords = ["fuel-prices", "duckdb", "tankerkoenig", "price-analysis", "energy-tax", "transparency"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5.0",
]

[project.scripts]
fuel-price-monitor = "fuel_price_monitor.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fuel_price_monitor"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
